# 2UNU

./: CMakeLists.txt  README  README.md  TODO.txt  build.sh  constants.h  ls_me  myEcho  util.c
arch/: arch.c
base64/: base64.c
basename/: basename.c
cat/: cat.c
chgrp/: chgrp.c
chmod/: chmod.c  chmod.h
chown/: chown.c
clear/: clear.c
cmp/: cmp.c  cmp.h
cp/: cp.c
curl/: curl.c
date/: date.c
dir/: dir.c
dircolors/: dircolors.c
dirname/: dirname.c
dos2unix/: dos2unix.c
echo/: constants.h  echo.c  echo.h
env/: env.c
exit/: exit.c
expand/: expand.c
export/: export.c
false/: constants.h  false.c
groupadd/: groupadd.c
groupdel/: groupdel.c
gzip/: gzip.c  gzip.h
head/: head.c
history/: history.c
hostname/: hostname.c
id/: id.c
kill/: kill.c
killall/: killall.c
link/: link.c
ln/: ln.c
logname/: logname.c
ls/: ls.c  ls.h
lscpu/: lscpu.c  lscpu.h
lspci/: lspci.c
man/: man.c
mkdir/: mkdir.c
mkfile/: README.txt  mkfile.c
mktemp/: mktemp.c  mktemp.h
mount/: mount.c  mount.h
mv/: mv.c
nl/: nl.c
passwd/: passwd.c
pidof/: pidof.c
pkill/: pkill.c
printenv/: printenv.c
printf/: constants.h  printf.c  printf.h
pwd/: constants.h  pwd.c  pwd.h
reboot/: reboot.c
rm/: rm.c
rmdir/: rmdir.c
sh/: constants.h  sh.c  sh.h
shutdown/: shutdown.c
sleep/: constants.h  sleep.c
sort/: sort.c
sum/: sum.c
tac/: tac.c
tail/: tail.c
touch/: touch.c
true/: constants.h  true.c  true.h
tty/: tty.c  tty.h
uname/: uname.c
uniq/: uniq.c
uptime/: uptime.c
useradd/: useradd.c
userdel/: userdel.c
users/: users.c
wget/: wget.c
who/: who.c
whoami/: constants.h  whoami.c  whoami.h
yes/: constants.h  yes.c  yes.h
